fix (header) realigned items

--- a/CSS/main.css
+++ b/CSS/main.css
@@ -1,105 +1,121 @@
-@import url('https://fonts.googleapis.com/css2?family=MedievalSharp&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Patua+One&family=Playwrite+AR:wght@100..400&family=Playwrite+DK+Loopet:wght@100..400&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=MedievalSharp&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Patua+One&family=Playwrite+AR:wght@100..400&family=Playwrite+DK+Loopet:wght@100..400&display=swap");
 
-*, *::before, *::after{
-    box-sizing: border-box; 
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
 }
 
-*{
-    margin: 0; 
-    padding: 0; 
+* {
+  margin: 0;
+  padding: 0;
 }
 
-ul[role='list'], ol[role='list']{
-    list-style: none; 
+ul[role="list"],
+ol[role="list"] {
+  list-style: none;
 }
 
-html:focus-within{
-    scroll-behavior: smooth; 
+html:focus-within {
+  scroll-behavior: smooth;
 }
 
-a:not([class]){
-    text-decoration-skip-ink: auto; 
+a:not([class]) {
+  text-decoration-skip-ink: auto;
 }
 
-img, picture, svg, video, canvas{
-    max-width: 100%;
-    height: auto; 
-    vertical-align: middle; 
-    font-style: italic; 
-    background-repeat: no-repeat; 
-    background-size: cover;
+img,
+picture,
+svg,
+video,
+canvas {
+  max-width: 100%;
+  height: auto;
+  vertical-align: middle;
+  font-style: italic;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
-input, button, textarea, select{
-    font: inherit; 
+input,
+button,
+textarea,
+select {
+  font: inherit;
 }
 
-@media (prefers-reduced-motion: reduce){
-    html:focus-within {
-        scroll-behavior: auto;
-    }
-    *, *::before, *::after {
-        animation-duration: 0.01ms !important;
-        animation-iteration-count: 1 !important;
-        transition-duration: 0.01ms !important;
-        scroll-behavior: auto !important;
-        transition: none;
-    }
+@media (prefers-reduced-motion: reduce) {
+  html:focus-within {
+    scroll-behavior: auto;
+  }
+  *,
+  *::before,
+  *::after {
+    animation-duration: 0.01ms !important;
+    animation-iteration-count: 1 !important;
+    transition-duration: 0.01ms !important;
+    scroll-behavior: auto !important;
+    transition: none;
+  }
 }
 
-body, html{
-    height: 100%; 
-    scroll-behavior: smooth; 
+body,
+html {
+  height: 100%;
+  scroll-behavior: smooth;
 }
 
-:root{
-    --primary-color: #201E43;
-    --secondary-color: #134B70;
-    --tertiary-color: #508C9B;
-    --cuarternary-color: #EEEEEE;
+:root {
+  --primary-color: #201e43;
+  --secondary-color: #134b70;
+  --tertiary-color: #508c9b;
+  --cuarternary-color: #eeeeee;
 
-    --title-font: "Playwrite AR", cursive;
-    --content-font: "Open Sans", sans-serif;
+  --title-font: "Playwrite AR", cursive;
+  --content-font: "Open Sans", sans-serif;
 }
 
-.navbar{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    background-color: var(--primary-color);
-    padding: 1rem;
-    color: var(--cuarternary-color);
+.navbar {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: var(--primary-color);
+  padding: 1rem;
+  color: var(--cuarternary-color);
 }
 
-.navbar h3{
-    font-family: var(--title-font);
+.navbar h3 {
+  font-family: var(--title-font);
 }
 
-.navbarIcon{
-    color: var(--cuarternary-color);
+.navbarIcon {
+  color: var(--cuarternary-color);
 }
 
-.header{
-    background: linear-gradient(var(--secondary-color), var(--tertiary-color));
-    height: 100vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+.header {
+  background: linear-gradient(var(--secondary-color), var(--tertiary-color));
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
 }
 
-.big-text, .small-text{
-    color: var(--cuarternary-color);
-    text-align: center;
+.big-text,
+.small-text {
+  color: var(--cuarternary-color);
+  text-align: center;
+  
 }
 
-.big-text{
-    font-family: var(--title-font);
-    font-weight: 800;
-    font-size: 3rem;
+.big-text {
+  font-family: var(--title-font);
+  font-weight: 800;
+  font-size: 3rem;
 }
 
-.small-text{
-    font-family: var(--content-font);
-    font-weight: 600;
-    font-size: 1.5rem;
+.small-text {
+  font-family: var(--content-font);
+  font-weight: 600;
+  font-size: 1.5rem;
 }
